--- a/templates/index.html
+++ b/templates/index.html
@@ -7,12 +7,12 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Styles -->
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-    <link rel='stylesheet' id='prettyphoto-css'  href="css/prettyPhoto.css" type='text/css' media='all'>
-    <link href="css/fontello.css" type="text/css" rel="stylesheet">
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/bootstrap/css/bootstrap.min.css') }}">
+    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/bootstrap.css') }}">
+    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel=stylesheet id='prettyphoto-css' type=text/css href="{{ url_for('static', filename='css/prettyPhoto.css') }}" media='all' >
+    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/fontello.css') }}">
+    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='font-awesome/css/font-awesome.min.css') }}">
     <!--[if lt IE 7]>
             <link href="css/fontello-ie7.css" type="text/css" rel="stylesheet">  
         <![endif]-->
@@ -22,23 +22,25 @@
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
     }
     </style>
-    <link href="css/bootstrap-responsive.css" rel="stylesheet">
+    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/bootstrap-responsive.css') }}">
+    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='font-awesome/css/font-awesome.min.css') }}">
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
           <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
     <!-- Favicon -->
     <link rel="shortcut icon" href="img/favicon.ico">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
     <!-- JQuery -->
-    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.js') }}"></script>
     <!-- Load ScrollTo -->
-    <script type="text/javascript" src="js/jquery.scrollTo-1.4.2-min.js"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.scrollTo-1.4.2-min.js') }}"></script>
     <!-- Load LocalScroll -->
-    <script type="text/javascript" src="js/jquery.localscroll-1.2.7-min.js"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.localscroll-1.2.7-min.js') }}"></script>
     <!-- bootstrap.min -->
-    <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+    <!-- <script type="text/javascript" src="{{ url_for('static', filename='css/bootstrap/js/bootstrap.min.js') }}"></script> -->
     <!-- Load ProgressBar -->
-    <script type="text/javascript" src="js/progressbar.min.js"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/progressbar.min.js') }}"></script>
     <!-- prettyPhoto Initialization -->
     <script type="text/javascript" charset="utf-8">
           $(document).ready(function(){
@@ -78,9 +80,16 @@
         <div class="container">
           <div class="row">
             <div class="span12">
+            <form method="POST">
+            <fieldset>
+              {{ sform.hidden_tag() }}
               <h2>Masukkan artikel yang mau dideteksi kebenerannya.</h2>
-              <input type="text" name="your-email" placeholder="Masukkan artikel Anda" class="cform-text" size="40" title="Artikel Anda">
-              <input type="submit" value="Cek Kebenaran" class="cform-submit">
+              <!-- <input type="text" name="your-email" placeholder="Masukkan artikel Anda" class="cform-text" size="40" title="Artikel Anda"> -->
+              {{ sform.keyword }} 
+              {{ sform.search }}
+              <!-- <a href="#services"><input type="submit" value="Cek Kebenaran" class="cform-submit"></a> -->
+            </fieldset>
+            </form>
             </div>
           </div>
           <h3 style="margin-top: 10px; color: white; ">*Masukkan lebih dari 500 karakter</h3>
@@ -126,29 +135,17 @@
         </div>
         <br>
         <div class="row">
+          {% for v in data %}
           <div class="span3">
-            <h2>Web design</h2>
-            <div id="progress1"></div>
+            <h2>{{ v[0] }}</h2>
+            <div class="progress">
+              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="<?php echo $persen; ?>" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+              80%
+              </div>
+            </div>
             <p class="indicate">Memiliki kemiripan <b>80%</b></p>
           </div>
-          <!-- /.span3 -->
-          <div class="span3">
-            <h2>Print Design</h2>
-            <div id="progress2"></div>
-            <p class="indicate">Memiliki kemiripan <b>80%</b></p>
-          </div>
-          <!-- /.span3 -->
-          <div class="span3">
-            <h2>Ecommerce</h2>
-            <div id="progress3"></div>
-            <p class="indicate">Memiliki kemiripan <b>80%</b></p>
-          </div>
-          <!-- /.span3 -->
-          <div class="span3">
-            <h2>Marketing</h2>
-            <div id="progress4"></div>
-            <p class="indicate">Memiliki kemiripan <b>80%</b></p>
-          </div>
+          {% endfor %}
           <!-- /.span3 -->
         </div>
         <!-- /.row -->
@@ -184,31 +181,31 @@
         <!-- Five columns -->
         <div class="row">
           <div class="span2 offset1">
-            <div class="teamalign"> <img class="team-thumb img-circle" src="img/flat-avatar.png" alt=""> </div>
+            <div class="teamalign"> <img class="team-thumb img-circle" src="{{ url_for('static', filename='img/flat-avatar.png') }}" alt=""> </div>
             <h3>Hilmawan</h3>
             <div class="job-position">08829</div>
           </div>
           <!-- ./span2 -->
           <div class="span2">
-            <div class="teamalign"> <img class="team-thumb img-circle" src="img/flat-avatar.png" alt=""> </div>
+            <div class="teamalign"> <img class="team-thumb img-circle" src="{{ url_for('static', filename='img/flat-avatar.png') }}" alt=""> </div>
             <h3>Yulinda</h3>
             <div class="job-position">web developer</div>
           </div>
           <!-- ./span2 -->
           <div class="span2">
-            <div class="teamalign"> <img class="team-thumb img-circle" src="img/flat-avatar.png" alt=""> </div>
+            <div class="teamalign"> <img class="team-thumb img-circle" src="{{ url_for('static', filename='img/flat-avatar.png') }}" alt=""> </div>
             <h3>Aulia</h3>
             <div class="job-position">graphic designer</div>
           </div>
           <!-- ./span2 -->
           <div class="span2">
-            <div class="teamalign"> <img class="team-thumb img-circle" src="img/flat-avatar.png" alt=""> </div>
+            <div class="teamalign"> <img class="team-thumb img-circle" src="{{ url_for('static', filename='img/flat-avatar.png') }}" alt=""> </div>
             <h3>Rini</h3>
             <div class="job-position">project manager</div>
           </div>
           <!-- ./span2 -->
           <div class="span2">
-            <div class="teamalign"> <img class="team-thumb img-circle" src="img/flat-avatar.png" alt=""> </div>
+            <div class="teamalign"> <img class="team-thumb img-circle" src="{{ url_for('static', filename='img/flat-avatar.png') }}" alt=""> </div>
             <h3>Abdurrahman</h3>
             <div class="job-position">09434</div>
           </div>
@@ -243,10 +240,9 @@
       <!-- ./container -->
     </div>
     <!-- Loading the javaScript at the end of the page -->
-    <script type="text/javascript" src="js/bootstrap.js"></script>
-    <script type="text/javascript" src="js/jquery.prettyPhoto.js"></script>
-    <script type="text/javascript" src="js/site.js"></script>
-    
+    <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.prettyPhoto.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/site.js') }}"></script>
     <script type="text/javascript">
       // progressbar.js@1.0.0 version is used
       // Docs: http://progressbarjs.readthedocs.org/en/1.0.0/
