--- a/templates/index.html
+++ b/templates/index.html
@@ -86,7 +86,7 @@
               <h2>Masukkan artikel yang mau dideteksi kebenerannya.</h2>
               <!-- <input type="text" name="your-email" placeholder="Masukkan artikel Anda" class="cform-text" size="40" title="Artikel Anda"> -->
               {{ sform.keyword }} 
-              {{ sform.search }}
+              {{ sform.search }}<a href="#services"></a>
               <!-- <a href="#services"><input type="submit" value="Cek Kebenaran" class="cform-submit"></a> -->
             </fieldset>
             </form>
@@ -130,8 +130,14 @@
         <h1>Hasil Pencarian</h1>
         <!-- Four columns -->
         <div class="row">
-          <center><div id="progressBar"></div></center>  
-          <p class="indicate"><b>80%</b> Terdeteksi HOAX</p>
+          <div class="results">
+            <div class="progress">
+              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                80%
+              </div>
+            </div>  
+            <p class="indicate"><b>80%</b> Terdeteksi HOAX</p>
+          </div>
         </div>
         <br>
         <div class="row">
@@ -139,11 +145,11 @@
           <div class="span3">
             <h2>{{ v[0] }}</h2>
             <div class="progress">
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="<?php echo $persen; ?>" aria-valuemin="0" aria-valuemax="100" style="width:80%">
-              80%
+              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{ v[1] }}" aria-valuemin="0" aria-valuemax="100" style="width:{{ v[1] }}%">
+              {{ v[1] }}%
               </div>
             </div>
-            <p class="indicate">Memiliki kemiripan <b>80%</b></p>
+            <p class="indicate">Memiliki kemiripan <b>{{ v[1] }}%</b></p>
           </div>
           {% endfor %}
           <!-- /.span3 -->
@@ -183,31 +189,31 @@
           <div class="span2 offset1">
             <div class="teamalign"> <img class="team-thumb img-circle" src="{{ url_for('static', filename='img/flat-avatar.png') }}" alt=""> </div>
             <h3>Hilmawan</h3>
-            <div class="job-position">08829</div>
+            <div class="job-position">15/384472/SV08829</div>
           </div>
           <!-- ./span2 -->
           <div class="span2">
             <div class="teamalign"> <img class="team-thumb img-circle" src="{{ url_for('static', filename='img/flat-avatar.png') }}" alt=""> </div>
             <h3>Yulinda</h3>
-            <div class="job-position">web developer</div>
+            <div class="job-position">15/380447/SV/08254</div>
           </div>
           <!-- ./span2 -->
           <div class="span2">
             <div class="teamalign"> <img class="team-thumb img-circle" src="{{ url_for('static', filename='img/flat-avatar.png') }}" alt=""> </div>
             <h3>Aulia</h3>
-            <div class="job-position">graphic designer</div>
+            <div class="job-position">15/386053/SV/09439</div>
           </div>
           <!-- ./span2 -->
           <div class="span2">
             <div class="teamalign"> <img class="team-thumb img-circle" src="{{ url_for('static', filename='img/flat-avatar.png') }}" alt=""> </div>
             <h3>Rini</h3>
-            <div class="job-position">project manager</div>
+            <div class="job-position">15/386081/SV/09467</div>
           </div>
           <!-- ./span2 -->
           <div class="span2">
             <div class="teamalign"> <img class="team-thumb img-circle" src="{{ url_for('static', filename='img/flat-avatar.png') }}" alt=""> </div>
             <h3>Abdurrahman</h3>
-            <div class="job-position">09434</div>
+            <div class="job-position">15/386048/SV/09434</div>
           </div>
           <!-- ./span2 -->
         </div>
@@ -243,106 +249,6 @@
     <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.prettyPhoto.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/site.js') }}"></script>
-    <script type="text/javascript">
-      // progressbar.js@1.0.0 version is used
-      // Docs: http://progressbarjs.readthedocs.org/en/1.0.0/
-
-      var bar = new ProgressBar.Line(progressBar, {
-        strokeWidth: 4,
-        easing: 'easeInOut',
-        duration: 1400,
-        color: '#FFEA82',
-        trailColor: '#eee',
-        trailWidth: 1,
-        svgStyle: {width: '100%', height: '25px'},
-        from: {color: '#FFEA82'},
-        to: {color: '#ED6A5A'},
-        step: (state, bar) => {
-          bar.path.setAttribute('stroke', state.color);
-        }
-      });
-
-      bar.animate(1.0);  // Number from 0.0 to 1.0
-
-      // BAR 1
-      var bar1 = new ProgressBar.Line(progress1, {
-        strokeWidth: 4,
-        easing: 'easeInOut',
-        duration: 1400,
-        color: '#FFEA82',
-        trailColor: '#eee',
-        trailWidth: 1,
-        svgStyle: {width: '225px', height: '15px'},
-        from: {color: '#FFEA82'},
-        to: {color: '#ED6A5A'},
-        step: (state, bar) => {
-          bar.path.setAttribute('stroke', state.color);
-        }
-      
-      });
-
-      bar1.animate(1.0);  // Number from 0.0 to 1.0
-
-      // BAR 2
-      var bar2 = new ProgressBar.Line(progress2, {
-        strokeWidth: 4,
-        easing: 'easeInOut',
-        duration: 1400,
-        color: '#FFEA82',
-        trailColor: '#eee',
-        trailWidth: 1,
-        svgStyle: {width: '225px', height: '15px'},
-        from: {color: '#FFEA82'},
-        to: {color: '#ED6A5A'},
-        step: (state, bar) => {
-          bar.path.setAttribute('stroke', state.color);
-        }
-      
-      });
-
-      bar2.animate(1.0);  // Number from 0.0 to 1.0
-
-      // BAR 2
-      var bar3 = new ProgressBar.Line(progress3, {
-        strokeWidth: 4,
-        easing: 'easeInOut',
-        duration: 1400,
-        color: '#FFEA82',
-        trailColor: '#eee',
-        trailWidth: 1,
-        svgStyle: {width: '225px', height: '15px'},
-        from: {color: '#FFEA82'},
-        to: {color: '#ED6A5A'},
-        step: (state, bar) => {
-          bar.path.setAttribute('stroke', state.color);
-        }
-      
-      });
-
-      bar3.animate(1.0);  // Number from 0.0 to 1.0
-
-      // BAR 2
-      var bar4= new ProgressBar.Line(progress4, {
-        strokeWidth: 4,
-        easing: 'easeInOut',
-        duration: 1400,
-        color: '#FFEA82',
-        trailColor: '#eee',
-        trailWidth: 1,
-        svgStyle: {width: '225px', height: '15px'},
-        from: {color: '#FFEA82'},
-        to: {color: '#ED6A5A'},
-        step: (state, bar) => {
-          bar.path.setAttribute('stroke', state.color);
-        }
-      
-      });
-
-      bar4.animate(1.0);  // Number from 0.0 to 1.0
-
-      // progressbar.js@1.0.0 version is used
-      // Docs: http://progressbarjs.readthedocs.org/en/1.0.0/
-    </script>
 
     <!--ANALYTICS CODE-->
 	<script type="text/javascript">
