Alhamdulillah fixasi project akhir sistem temu kembali

--- a/templates/index.html
+++ b/templates/index.html
@@ -132,11 +132,11 @@
         <div class="row">
           <div class="results">
             <div class="progress">
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
-                80%
+              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{ prosentase }}" aria-valuemin="0" aria-valuemax="100" style="width:{{ prosentase }}%">
+                {{ prosentase }}%
               </div>
             </div>  
-            <p class="indicate"><b>80%</b> Terdeteksi HOAX</p>
+            <p class="indicate"><b>{{ prosentase }}%</b> Terdeteksi HOAX</p>
           </div>
         </div>
         <br>
