mengganti icon distatus bar/di title

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,8 +29,7 @@
           <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
     <!-- Favicon -->
-    <link rel="shortcut icon" href="img/favicon.ico">
-    <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='img/b.jpg') }}">
     <!-- JQuery -->
     <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.js') }}"></script>
     <!-- Load ScrollTo -->
