fixasi error unicode penghapusan beberapa artikel yang error

--- a/templates/index.html
+++ b/templates/index.html
@@ -85,13 +85,15 @@
               <h2>Masukkan artikel yang mau dideteksi kebenerannya.</h2>
               <!-- <input type="text" name="your-email" placeholder="Masukkan artikel Anda" class="cform-text" size="40" title="Artikel Anda"> -->
               {{ sform.keyword }} 
-              {{ sform.search }}<a href="#services"></a>
+              {{ sform.search }}
               <!-- <a href="#services"><input type="submit" value="Cek Kebenaran" class="cform-submit"></a> -->
             </fieldset>
             </form>
             </div>
           </div>
           <h3 style="margin-top: 10px; color: white; ">*Masukkan lebih dari 500 karakter</h3>
+          <br>
+          <a href="#services"><input type="submit" style="padding: 0px; margin: 0px;" class="hasil" value="Hasil"></a>
           <div class="row">
             <div class="span12">
               <ul class="icon">
