--- a/static/css/style.css
+++ b/static/css/style.css
@@ -469,6 +469,8 @@ section#services {
 section#services h2 {
 	font-size: 22px;
 	margin-bottom: 15px;
+	margin-left: 5px;
+	margin-right: 5px;
 	margin-top: 10px;
 	text-align:center;
 }
